# BPLA_Optimisation

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
include/: agents.h  criteria.h  dynamics.h  sofama.h  stability.h  target_states.h
src/: criteria.cpp  dynamics.cpp  sofama.cpp  stability.cpp  target_states.cpp
